tests/errors/semantics/branch_blocks_do_not_match.odl
main :: () -> void  {
    x := if true then 1 else false;
    x;
};